This file contains major changes in released revisions.  Please read
the ChangeLog file for a more detailed listing of changes/bug fixes.

*5.1*
 New:
    - configure is now generated using autoconf 2.57.
    - linkUp and linkDown notifications can be enabled
      (see the linkUpDownNotifications snmpd.conf token documentation)
    - traps can be generated when a disman monitor event is triggered.
      (see the snmpd.conf documentation on "monitor" and "notificatonEvent")
    - new configure options to disable building of the agent, apps, ...
      ./configure --help for a list of package sections that can be excluded.
    - new configure option to remove specific code pieces (mib reading, ...)
      ./configure --help for a list of code areas that can be excluded.
    - new snmpd.conf tokens:  includeAllDisks
    - snmptrapd's new -t switch can be used to disable syslog.
      (useful for a no-output snmptrapd with only traphandle support)
    - snmptable sports 3 new options: fixed width, max-repeaters, left-justify.
      (see snmptable -h for details)
    - the UCD-DISKIO-MIB will now work on linux.
    - com2sec mappings for SNMP over unix sockets.

 Fixes:
    - More patches to properly demonize snmpd (close std*, double fork, ...).

 Ports:
    - diskio MIB support for Darwin.
    - ifSpeed under Linux should now be correct for most network cards.

*5.0.7*
 New:
    - VACM (access control) optimizations which will greatly benefit
      people who wish to exclude large portions of the MIB tree from
      some people.  Previously this was a large resource drain.
    - Add command line option to snmpd to set syslog facility
    - Reverse DISPLAY-HINT processing, i.e. it allows you to input data
      formatted like a DISPLAY-HINT prescribes
    - Support setting of sysDescr and sysObjectID via snmpd.conf
      configuration directives
    - New output option to force display of strings as hex
    - Persistent directory can be specified at runtime